@@ -1,3 +1,8 @@
+2010-08-28  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/nilfs2.c (grub_nilfs2_load_sb): Handle grub_disk_read
+	errors.
+
 2010-08-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Handle USB pendrives exposed as floppies.
